# fiducia-auth.rs

./: .envrc  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: keys.rs  main.rs  model.rs  store.rs  supabase.rs  sync.rs  token.rs
